--- a/k8s_inventory.ini
+++ b/k8s_inventory.ini
@@ -1,5 +1,5 @@
 [kubernetes]
-192.168.25.167 ansible_host=192.168.25.167 ansible_connection=ssh ansible_ssh_private_key_file=/home/jenkins/.ssh/id_rsa ansible_user=ansuser
+devab-86bb5d6bb9-5q4sn ansible_host=192.168.32.87 ansible_connection=ssh ansible_ssh_private_key_file=/home/jenkins/.ssh/id_rsa ansible_user=ansuser
 [kubernetes:vars]
 ansible_python_interpreter=/usr/bin/python3
 
